Fix the alignment of the chat box

--- a/RandomBackground_theme_core.css
+++ b/RandomBackground_theme_core.css
@@ -162,7 +162,7 @@
 }
 
 .backdrop-1wrmKB {
-	opacity: 0;
+    opacity: 0;
 }
 
 #app-mount {
@@ -171,6 +171,15 @@
     background-position: center;
 }
 
+/*
+Fix the alignment of the chat box
+*/
+.channelTextArea-1FufC0 {
+    margin-bottom: 12px !important;
+}
+.form-3gdLxP {
+    padding-left: 0px !important;
+}
 
 
 /*
